Fix overflow issue with quote

--- a/assets/css/imports/effects.css
+++ b/assets/css/imports/effects.css
@@ -147,7 +147,8 @@
 .highlight-blockquote:before {
   @apply absolute;
   top: .5rem;
-  left: 1.5rem;
+  left: calc(.5rem + 1%);
+  z-index: 1;
   @apply block;
   font-size: 8rem;
   @apply text-blue;
